--- a/landing.html
+++ b/landing.html
@@ -5,27 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo Lists</title>
-    <!-- CSS Import -->
     <link rel="stylesheet" href="landing.css" />
-    <!-- End of CSS Import -->
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;0,700;0,900;1,400&family=Montserrat:ital,wght@0,400;0,700;0,900;1,400&display=swap" rel="stylesheet">
-    <!-- End of Fonts -->
 </head>
 <body>
+
 <!-- App Wrapper -->
 <main class="app">
+
     <!-- Greeting -->
     <section class="greeting">
         <h1 class="title">
             What's up, <input type="text" id="name" placeholder="Name here" />
         </h1>
     </section>
-    <!-- End of Greeting -->
 
-    <!-- New Todo -->
+    <!-- Todo -->
     <section class="create-todo">
         <h3>ADD AN ITEM</h3>
         <form id="new-todo-form">
@@ -53,20 +51,16 @@
             <input type="submit" value="Add todo" />
         </form>
     </section>
-    <!-- End of New Todo -->
 
     <!-- Todo List -->
     <section class="todo-list">
         <h2>PROJECT DASHBOARD</h2>
         <div class="list" id="todo-list"></div>
     </section>
-    <!-- End of Todo List -->
 
 </main>
-<!-- End of App Wrapper -->
 
-<!-- JS Import -->
+<!-- JS -->
 <script src="scripts.js"></script>
-<!-- End of JS Import -->
 </body>
 </html>
