Adding files with backend implementation

--- a/index.html
+++ b/index.html
@@ -3,98 +3,108 @@
 <!-- login + registration page when reaching website -->
 
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="utf-8">
   <title>PlanMan</title>
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
 
-<!-- title -->
-<div style="text-align:center;">
-  <h1>PlanMan</h1>
-</div>
+  <!-- title -->
+  <div style="text-align:center;">
+    <h1>PlanMan</h1>
+  </div>
 
-<!-- description -->
-<div style="text-align:center;">
-  <p>Breaking down large projects/tasks into small manageable assignments that helps track progress</p>
-</div>
+  <!-- description -->
+  <div style="text-align:center;">
+    <p>Breaking down large projects/tasks into small manageable assignments that helps track progress</p>
+  </div>
 
-<!--making the form that you can slide between -->
-<div class="wrapper">
-  <div class="form-container">
-    <div class="slide-controls">
-      <input type="radio" name="slide" id="login" checked>
-      <input type="radio" name="slide" id="signup">
-      <label for="login" class="slide login">Login</label>
-      <label for="signup" class="slide signup">Sign up</label>
-      <div class="slider-tab"></div>
-    </div>
-    <div class="form-inner">
+  <!--making the form that you can slide between -->
+  <div class="wrapper">
+    <div class="form-container">
+      <div class="slide-controls">
+        <input type="radio" name="slide" id="login" checked>
+        <input type="radio" name="slide" id="signup">
+        <label for="login" class="slide login">Login</label>
+        <label for="signup" class="slide signup">Sign up</label>
+        <div class="slider-tab"></div>
+      </div>
+      <div class="form-inner">
 
-      <!-- submitting form leads to main landing page from login -->
-      <form action='landing.html' class="login">
+        <!-- submitting form leads to main landing page from login -->
+        <form onsubmit="return store(event)" class="login" action="landing.html">
 
-
-        <div class="field">
-          <input type="text" placeholder="Email Address" required>
-        </div>
-        <div class="field">
-          <input type="password" placeholder="Password" required>
-        </div>
-        <div class="pass-link">
-          <a href="#">Forgot password?</a>
-        </div>
-        <div class="field btn">
-          <div class="btn-layer">
+          <div class="field">
+            <input id="login_email" type="email" placeholder="Email Address" required onkeyup="valLogMail()">
           </div>
-          <input type="submit" value="Login">
-        </div>
-        <div class="signup-link">
-          Not a member? <a href="">Sign up now</a>
-        </div>
-      </form>
+          <span id="incorrect_email_alert"></span>
+          <div class="field">
+            <input type="password" placeholder="Password" required>
+          </div>
+          <div class="pass-link">
+            <a href="#">Forgot password?</a>
+          </div>
+          <div class="field btn">
+            <div class="btn-layer">
+            </div>
+            <input type="submit" value="Login">
+          </div>
+          <div class="signup-link">
+            Not a member? <a href="">Sign up now</a>
+          </div>
+        </form>
 
-      <!-- signup form leading to landing page -->
-      <form action="landing.html" class="signup">
-        <div class="field">
-          <input type="text" placeholder="Email Address" required>
-        </div>
-        <div class="field">
-          <input type="password" placeholder="Password" required>
-        </div>
-        <div class="field">
-          <input type="password" placeholder="Confirm password" required>
-        </div>
-        <div class="field btn">
-          <div class="btn-layer"></div>
-          <input type="submit" value="Sign up">
-        </div>
-      </form>
+        <!-- signup form leading to landing page -->
+        <form class="signup" onsubmit="return signup(event)">
+          <div class="field">
+            <input id="signup_email" type="email" placeholder="Email Address" required onkeyup="valSignMail()">
+          </div>
+          <span id="lblError" style="color: red"></span>
+          <div class="field">
+            <input type="password" id="signup_pass" placeholder="Password" required>
+          </div>
+          <div class="field">
+            <input type="password" id="signup_confirm_pass" placeholder="Confirm password" required onkeyup="valPas()">
+          </div>
+          <span id="wrong_pass_alert"></span>
+          <div class="field btn">
+            <div class="btn-layer"></div>
+            <input type="submit" value="Sign up" onclick="incorectPas()">
+          </div>
+        </form>
+      </div>
     </div>
   </div>
-</div>
 
-<!-- formatting -->
-<script>
-  const loginText = document.querySelector(".title-text .login");
-  const loginForm = document.querySelector("form.login");
-  const loginBtn = document.querySelector("label.login");
-  const signupBtn = document.querySelector("label.signup");
-  const signupLink = document.querySelector("form .signup-link a");
-  signupBtn.onclick = (()=>{
-    loginForm.style.marginLeft = "-50%";
-    loginText.style.marginLeft = "-50%";
-  });
-  loginBtn.onclick = (()=>{
-    loginForm.style.marginLeft = "0%";
-    loginText.style.marginLeft = "0%";
-  });
-  signupLink.onclick = (()=>{
-    signupBtn.click();
-    return false;
-  });
-</script>
+  <script type="text/javascript" src="jquery-1.11.3.min.js"></script>
+  <script type="text/javascript" language="javascript" src="login.js"></script>
+  <script type="text/javascript" language="javascript" src="script.js"></script>
+
+
+  <!-- formatting -->
+  <script>
+    const loginText = document.querySelector(".title-text .login");
+    const loginForm = document.querySelector("form.login");
+    const loginBtn = document.querySelector("label.login");
+    const signupBtn = document.querySelector("label.signup");
+    const signupLink = document.querySelector("form .signup-link a");
+    signupBtn.onclick = (() => {
+      loginForm.style.marginLeft = "-50%";
+      loginText.style.marginLeft = "-50%";
+    });
+    loginBtn.onclick = (() => {
+      loginForm.style.marginLeft = "0%";
+      loginText.style.marginLeft = "0%";
+    });
+    signupLink.onclick = (() => {
+      signupBtn.click();
+      return false;
+    });
+  </script>
 </body>
+
 </html>
