--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
           <span id="incorrect_email_alert"></span>
           <div class="field">
-            <input type="password" placeholder="Password" required>
+            <input id="login_password" type="password" placeholder="Password" required>
           </div>
           <div class="pass-link">
             <a href="#">Forgot password?</a>
@@ -59,7 +59,7 @@
         </form>
 
         <!-- signup form leading to landing page -->
-        <form class="signup" onsubmit="return signup(event)">
+        <form class="signup" onsubmit="return signup(event)" action="landing.html">
           <div class="field">
             <input id="signup_email" type="email" placeholder="Email Address" required onkeyup="valSignMail()">
           </div>
